# yage

./: ANALYSIS.md  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/yage/: MainActivity.kt
android/app/src/main/kotlin/com/yourmateapps/retropal/: MainActivity.kt  YageTextureBridge.kt
android/app/src/main/kotlin/com/yourmateapps/yage/: MainActivity.kt
android/app/src/main/res/drawable/: launch_background.xml  tv_banner.xml
android/app/src/main/res/drawable-v21/: launch_background.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  game_mode_config.xml
docs/: CRASHES_DEFECTS_FEATURES.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: mgba_bindings.dart  mgba_stub.dart  rcheevos_bindings.dart
lib/models/: emulator_settings.dart  game_frame.dart  game_rom.dart  gamepad_layout.dart  gamepad_skin.dart  ra_achievement.dart
lib/providers/: app_providers.dart
lib/screens/: achievements_screen.dart  game_screen.dart  home_screen.dart  ra_login_screen.dart  settings_screen.dart  splash_screen.dart
lib/services/: ad_service.dart  artwork_service.dart  cover_art_service.dart  emulator_service.dart  game_database.dart  game_library_service.dart  gamepad_input.dart  link_cable_service.dart  notification_service.dart  ra_runtime_service.dart  rcheevos_client.dart  retro_achievements_service.dart  rom_folder_service.dart  save_backup_service.dart  settings_service.dart
lib/utils/: device_memory.dart  theme.dart  tv_detector.dart
lib/widgets/: achievement_unlock_overlay.dart  banner_ad_widget.dart  game_card.dart  game_display.dart  game_frame_overlay.dart  platform_filter.dart  rom_folder_setup_dialog.dart  tv_file_browser.dart  tv_focusable.dart  virtual_gamepad.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  CMakeLists_libretro.txt  yage_core.c  yage_core.h  yage_libretro.c  yage_libretro.h  yage_rcheevos.c  yage_rcheevos.h
native/build-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
scripts/: build_libretro_cores.sh  fetch_libretro_cores.ps1  fetch_libretro_cores.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
